@@ -4,6 +4,7 @@
  * Improved documentation for:
   * [Grant-ServiceControlPermission](http://get-carbon.org/help/Grant-ServiceControlPermission.html)
   * [Install-Service](http://get-carbon.org/help/Install-Service.html)
+  * [Invoke-SubInAcl](http://get-carbon.org/help/Invoke-SubInAcl.html)
   
 # 0.2.5 (29 June 2012)
 
